--- a/Parfume/appsettings.json
+++ b/Parfume/appsettings.json
@@ -12,6 +12,8 @@
       "Default": "Data Source=mssql06.trwww.com;Initial Catalog=parfumde_DB_PARFUME;User Id=PARFUME_ADMIN;Password=Qaqa@@57"
       //7?yEPf@j user Parfume
       //Lohh14^4
+      //turhost aysu0502N
+
     }
 
   },
