--- a/Parfume/appsettings.json
+++ b/Parfume/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AppSettings": {
     "ConnectionString": {
-      //"Default": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=DB_PARFUME; Integrated Security=True; Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-      "Default": "Data Source=mssql06.trwww.com;Initial Catalog=parfumde_DB_PARFUME;User Id=PARFUME_ADMIN;Password=Qaqa@@57"
+      "Default": "Data Source=IT051;Initial Catalog=DB_PARFUME; Integrated Security=True; Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+      //"Default": "Data Source=mssql06.trwww.com;Initial Catalog=parfumde_DB_PARFUME;User Id=PARFUME_ADMIN;Password=Qaqa@@57"
       //7?yEPf@j user Parfume
       //Lohh14^4
       //turhost aysu0502N
