--- a/Parfume/app.config
+++ b/Parfume/app.config
@@ -2,8 +2,8 @@
 <configuration>
 
   <connectionStrings>
-   k <add name="PARFUME" connectionString="Data Source=IT051;Initial Catalog=DB_PARFUME; Integrated Security=True; Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;" />
-    <!--<add name="PARFUME" connectionString= "Data Source=mssql06.trwww.com;Initial Catalog=parfumde_DB_PARFUME;User Id=PARFUME_ADMIN;Password=Qaqa@@57" />-->
+    <!--<add name="PARFUME" connectionString="Data Source=WINDOWS-QN5LGNS\SQLEXPRESS;Initial Catalog=DB_PARFUME; Integrated Security=True; Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;" />-->
+    <add name="PARFUME" connectionString= "Data Source=mssql06.trwww.com;Initial Catalog=parfumde_DB_PARFUME;User Id=PARFUME_ADMIN;Password=Qaqa@@57" />
 <!--https://www.youtube.com/watch?v=ScaOFvMn3Ek&t=514s   deploy video-->
   </connectionStrings>
 </configuration>
