Before bonus card

--- a/Parfume/appsettings.json
+++ b/Parfume/appsettings.json
@@ -9,11 +9,11 @@
   "AppSettings": {
     "ConnectionString": {
       //"Default": "Data Source=WINDOWS-QN5LGNS\\SQLEXPRESS;Initial Catalog=DB_PARFUME; Integrated Security=True; Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-      "Default": "Data Source=mssql06.trwww.com;Initial Catalog=parfumde_DB_PARFUME;User Id=PARFUME_ADMIN;Password=Qaqa@@57"
+      "Default": "Data Source=mssql04.trwww.com;Initial Catalog=parfumde_DB_PARFUME;User Id=PARFUME_ADMIN;Password=Qaqa@@57"
       //"Default": "Data Source=mssql02.trwww.com;Initial Catalog=DB_Vanilla_Parfume;User Id=Vanille1234;Password=Vanille!!@@575757"
       //7?yEPf@j user Parfume
-      //Lohh14^4
-      //turhost aysu0502N
+      //Lohh14^4 parfume1988
+      //  aysu0502N
 
     }
 
